interpreter/tests/test_files/neg/bad_promote.s
	mov r4 pc
    promoteU r4
    halt
